add bootstrap navbar

--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -1,51 +1,46 @@
+<div class="navbar sticky-top bg-body-tertiary">
 <div class="container-fluid">
     <div class="row">
         <ul class="nav nav-tabs">
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/createuser/index.php?{{ urlQuery }}">Create User</a>
-                    <span>/</span>
-                    <a href="https://internal.{{ domain }}/adsl/index.php?{{ urlQuery }}">DSL</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/createuser/index.php?{{ urlQuery }}">Create User</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/InfoUser/default.asp?{{ urlQuery }}">Users</a>
-                    <span>/</span>
-                    <a href="https://nexxia.{{ domain }}/?{{ urlQuery }}">Tickets</a>
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/InfoUser/default.asp?{{ urlQuery }}">Users</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/InfoGeneral/default.asp?{{ urlQuery }}">General Search</a>
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/InfoGeneral/default.asp?{{ urlQuery }}">General Search</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/conndebug/index.php?{{ urlQuery }}">Debugging</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/conndebug/index.php?{{ urlQuery }}">Debugging</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/antispam/index.php?{{ urlQuery }}">Antispam</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/antispam/index.php?{{ urlQuery }}">Antispam</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/reactivate/index.php?{{ urlQuery }}">Reactivate</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/reactivate/index.php?{{ urlQuery }}">Reactivate</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/payproc/?{{ urlQuery }}">Pay Process</a>
-                    <span>/</span>
-                    <a href="https://www.{{ domain }}/scripts/internal/PayProc/Pay.asp?{{ urlQuery }}">Old</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/payproc/?{{ urlQuery }}">Pay Process</a>
                 </div>
                 <!-- nav-link -->
             </li>
@@ -54,45 +49,43 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/UserInvoice/default.asp?{{ urlQuery }}">User Invoices</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/adsl/index.php?{{ urlQuery }}">DSL</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/createuser/updateuser.php?{{ urlQuery }}">Update</a>
-                    <span>/</span>
-                    <a href="https://www.{{ domain }}/scripts/internal/UserFile/UsersPlans.asp?{{ urlQuery }}">Plans</a>
+                    <a class="nav-link p-0" href="https://nexxia.{{ domain }}/?{{ urlQuery }}">Tickets</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/OutstandingTransactions/default.asp?{{ urlQuery }}">Outstanding Issues</a>
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/PayProc/Pay.asp?{{ urlQuery }}">Old Pay Process</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/netstats/index.php?{{ urlQuery }}">Connection Time</a>
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/UserFile/UsersPlans.asp?{{ urlQuery }}">Plans</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/TerminateUser/default.asp?{{ urlQuery }}">End Account</a>
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/ProcessCC/default.asp?{{ urlQuery }}">Old ProcessCC</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/RestoreUserAccount/default.asp?{{ urlQuery }}">Restore Account</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/troublereporter/"> Outages </a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/blockaccount/index.php?{{ urlQuery }}">Block Account</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/support/"> TechSup </a>
                 </div>
                 <!-- nav-link -->
             </li>
@@ -101,33 +94,72 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/payproc/processcc.php?{{ urlQuery }}">Process CC</a>
-                    <span>/</span>
-                    <a href="https://www.{{ domain }}/scripts/internal/ProcessCC/default.asp?{{ urlQuery }}">Old</a>
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/UserInvoice/default.asp?{{ urlQuery }}">User Invoices</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/SecondaryMailAccounts/default.asp?{{ urlQuery }}">Additional Email</a>
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/createuser/updateuser.php?{{ urlQuery }}">Update</a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/calllogs/index.php?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/OutstandingTransactions/default.asp?{{ urlQuery }}">Outstanding Issues</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/netstats/index.php?{{ urlQuery }}">Connection Time</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/TerminateUser/default.asp?{{ urlQuery }}">End Account</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/RestoreUserAccount/default.asp?{{ urlQuery }}">Restore Account</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/blockaccount/index.php?{{ urlQuery }}">Block Account</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="w-100 d-none d-sm-block">
+                <!-- use 7 columns for screens bigger than -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/payproc/processcc.php?{{ urlQuery }}">Process CC</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/SecondaryMailAccounts/default.asp?{{ urlQuery }}">Additional Email</a>
+                </div>
+                <!-- nav-link -->
+            </li>
+            <li class="nav-item col p-0">
+                <div class="nav-link p-0 border">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/calllogs/index.php?{{ urlQuery }}">
                         Call Logs
                     </a>
-                    <span>/</span>
-                    <a href="https://internal.{{ domain }}/troublereporter/">
-                        Outages
-                    </a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/iplocator/index.php?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/iplocator/index.php?{{ urlQuery }}">
                         Locate IP
                     </a>
                 </div>
@@ -135,7 +167,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/billinglist/?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/billinglist/?{{ urlQuery }}">
                         Billing Reminders
                     </a>
                 </div>
@@ -143,7 +175,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/ForceChgPass/default.asp?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/ForceChgPass/default.asp?{{ urlQuery }}">
                         Change Pass
                     </a>
                 </div>
@@ -151,7 +183,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/latepayments/?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/latepayments/?{{ urlQuery }}">
                         Late Payments
                     </a>
                 </div>
@@ -162,7 +194,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/UserInvoice/UpdateInvoice.asp?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/UserInvoice/UpdateInvoice.asp?{{ urlQuery }}">
                         Update Invoice
                     </a>
                 </div>
@@ -170,7 +202,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/WebHostMaint/index.php?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/WebHostMaint/index.php?{{ urlQuery }}">
                         Web Hosting
                     </a>
                 </div>
@@ -178,19 +210,15 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/HowTo/HowTo.asp?SelectLanguage=F">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/HowTo/HowTo.asp?SelectLanguage=F">
                         HowTo
-                    </a>
-                    <span>/</span>
-                    <a href="https://internal.{{ domain }}/support/">
-                        TechSup
                     </a>
                 </div>
                 <!-- nav-link -->
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/tellocator/index.php?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/tellocator/index.php?{{ urlQuery }}">
                         Locate Tel
                     </a>
                 </div>
@@ -198,7 +226,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://internal.{{ domain }}/verifypass/index.php?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://internal.{{ domain }}/verifypass/index.php?{{ urlQuery }}">
                         Verify Password
                     </a>
                 </div>
@@ -206,7 +234,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/quote/CustomInvoice.asp?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/quote/CustomInvoice.asp?{{ urlQuery }}">
                         Payment Receipt
                     </a>
                 </div>
@@ -214,7 +242,7 @@
             </li>
             <li class="nav-item col p-0">
                 <div class="nav-link p-0 border">
-                    <a href="https://www.{{ domain }}/scripts/internal/Delinquents/AuthenticatedUpdates.asp?{{ urlQuery }}">
+                    <a class="nav-link p-0" href="https://www.{{ domain }}/scripts/internal/Delinquents/AuthenticatedUpdates.asp?{{ urlQuery }}">
                         Auto Updates
                     </a>
                 </div>
@@ -226,4 +254,5 @@
 </div>
 <!-- container -->
 <div class="border border-bottom border-danger">
+</div>
 </div>
