--- a/internaltools/updateuser/templates/updateuser/sample.html
+++ b/internaltools/updateuser/templates/updateuser/sample.html
@@ -14,23 +14,28 @@
                 {% endfor %}
             </ul>
         {% endif %}
-
         {# formUserDetail.errors.items #}
-	{# formUserDetail.errors.as_data #}
-        <p>BASE HTML {{ loginName }}</p>
-        <p>myTax: {{ myTax }}</p>
+        {# formUserDetail.errors.as_data #}
         <!-- form search users -->
         <form id="SearchLoginForm" action="" novalidate="" method="GET">
             <div class="row g-3">
                 <fieldset class="form-group border">
-                    <legend>Update User</legend>
+                    <legend>Update User:</legend>
                     {# {{ formSearchLogin.csrf_token }} #}
-                    <label for="{{ formSearchLogin.loginName.id_for_label }}" class="form-label">
-                        {{ formSearchLogin.loginName.label }}
-                    </label>
-                    {{ formSearchLogin.loginName }}
-                    <small class="form-text text-danger">{{ formSearchLogin.loginName.errors }}</small>
-                    <button type="submit" class="btn btn-primary mb-3">Search</button>
+                    <div class="row mb-3">
+                        <label for="{{ formSearchLogin.loginName.id_for_label }}"
+                               class="border-bottom col-sm-2 col-form-label">
+                            {{ formSearchLogin.loginName.label }}
+                        </label>
+                        <div class="col-sm-10">
+                            {{ formSearchLogin.loginName }}
+                            <small class="form-text text-danger">{{ formSearchLogin.loginName.errors }}</small>
+                        </div>
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-10">
+                            <button type="submit" class="btn btn-primary mb-3">Search</button>
+                        </div>
+                    </div>
                 </fieldset>
             </div>
         </form>
@@ -220,14 +225,17 @@
                         <div class="col-sm-10">
                             {{ formUserDetail.notes }}<small class="form-text text-danger">{{ formUserDetail.notes.errors }}</small>
                         </div>
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-10">
+                            <button type="submit"
+                                    name="updateUser"
+                                    value="1"
+                                    accesskey="s"
+                                    title="alt-S / ctrl-alt-S"
+                                    class="btn btn-secondary mb-3">Update User</button>
+                        </div>
                     </div>
                     <!-- end div row -->
-                    <button type="submit"
-                            name="updateUser"
-                            value="1"
-                            accesskey="s"
-                            title="alt-S / ctrl-alt-S"
-                            class="btn btn-secondary mb-3">Update User</button>
                 </fieldset>
             </div>
         </form>
