make topmenu display active links

--- a/internaltools/templates/internaltools/topmenu.html
+++ b/internaltools/templates/internaltools/topmenu.html
@@ -4,8 +4,10 @@
             <ul class="nav nav-tabs">
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://internal.{{ domain }}/createuser/index.php?{{ urlQuery }}">Create User</a>
+			{% url 'createuser:index' as thisurl %}
+			<a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}" href="{{ thisurl }}">Create User</a>
+                        <!-- <a class="nav-link p-0 {% if request.resolver_match.route == 'createuser/' %} active {% endif%}"
+				href="https://internal.{{ domain }}/createuser/index.php?{{ urlQuery }}">Create User</a> -->
                     </div>
                     <!-- nav-link -->
                 </li>
@@ -107,15 +109,19 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://www.{{ domain }}/scripts/internal/UserInvoice/default.asp?{{ urlQuery }}">User Invoices</a>
+			{% url 'userinvoice:index' as thisurl %}
+			<a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}" href="{{ thisurl }}">User Invoices</a>
+                        <!-- <a class="nav-link p-0 {% if request.resolver_match.route == 'userinvoice/' %} active {% endif%}"
+				href="https://www.{{ domain }}/scripts/internal/UserInvoice/default.asp?{{ urlQuery }}">User Invoices</a>-->
                     </div>
                     <!-- nav-link -->
                 </li>
-                <li class="nav-item col p-0">
+		<li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
-                           href="https://internal.{{ domain }}/createuser/updateuser.php?{{ urlQuery }}">Update</a>
+			{% url 'updateuser:index' as thisurl %}
+			<a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}" href="{{ thisurl }}">Update</a>
+                        <!-- <a class="nav-link p-0 {% if request.resolver_match.route == 'updateuser/' %} active {% endif%}"
+				href="https://internal.{{ domain }}/createuser/updateuser.php?{{ urlQuery }}">Update</a>-->
                     </div>
                     <!-- nav-link -->
                 </li>
@@ -213,10 +219,12 @@
                 </li>
                 <li class="nav-item col p-0">
                     <div class="nav-link p-0 border">
-                        <a class="nav-link p-0"
+			{% url 'updateinvoice:index' as thisurl %}
+			<a class="nav-link p-0 {% if request.path == thisurl %}active{% endif %}" href="{{ thisurl }}">Update Invoice</a>
+                        <!--<a class="nav-link p-0 {% if request.resolver_match.route == 'updateinvoice/' %} active {% endif%}"
                            href="https://www.{{ domain }}/scripts/internal/UserInvoice/UpdateInvoice.asp?{{ urlQuery }}">
                             Update Invoice
-                        </a>
+			</a>-->
                     </div>
                     <!-- nav-link -->
                 </li>
