change label user invoice

--- a/internaltools/userinvoice/templates/userinvoice/sample.html
+++ b/internaltools/userinvoice/templates/userinvoice/sample.html
@@ -20,7 +20,7 @@
         <form id="SearchLoginForm" action="" novalidate="" method="GET">
             <div class="row g-3">
                 <fieldset class="form-group border">
-                    <legend>Update User:</legend>
+                    <legend>User Invoice:</legend>
                     {# {{ formSearchLogin.csrf_token }} #}
                     <div class="row mb-3">
                         <label for="{{ formSearchLogin.loginName.id_for_label }}"
