updateinvoice in transit2

--- a/internaltools/updateinvoice/templates/updateinvoice/sample.html
+++ b/internaltools/updateinvoice/templates/updateinvoice/sample.html
@@ -17,7 +17,7 @@
         {# formUserDetail.errors.items #}
         {# formUserDetail.errors.as_data #}
 	<h1>{{ debugMessage }}</h1>
-	<pre>{{ formInvoice.get_context|pprint }}</pre>
+	<pre>{{ invoiceDetailDict|pprint }}</pre>
         <!-- form search users -->
         <form id="SearchLoginForm" action="" novalidate="" method="GET">
             <div class="row g-3">
